# BBTv2

./: .gitmodules  CMakeLists.txt  README.md  win_setup.bat
BBT/: CMakeLists.txt
BBT/server/: BTCServer.cpp  CMakeLists.txt  SimpleServer.cpp  main.cpp  net_client.h  net_connection.h  net_headers.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h
BBT/src/: bbt_assert.cpp  bbt_assert.h  bbt_byte_buf.cpp  bbt_byte_buf.h  bbt_event_system.cpp  bbt_event_system.h  bbt_log.cpp  bbt_log.h  log.cpp  log.h  main.cpp
BBT/src/utils/imgui/: imgui_impl_sdl3.cpp
doc/DevLog/: Entry point and class hierarchy draft.md  Notes.md  To Do.md
doc/DevLog/.obsidian/: workspace.json
